<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/ucll_pink"
    android:layout_width="match_parent"
    android:layout_height="70dp">

    <TextView
        android:id="@+id/videoId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:text="@string/videoId"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/videoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="35dp"
        android:text="@string/videoTitle"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/videoId"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="95dp"
        android:text="@string/updateVideo"
        android:textColor="@color/ucll_lightblue"
        android:backgroundTint="@color/ucll_darkblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/deleteVideo"
        android:textColor="@color/ucll_lightblue"
        android:backgroundTint="@color/ucll_darkblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>